Updated short bio and families twitter urls

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -25,11 +25,14 @@
 					<img src="http://s.gravatar.com/avatar/fc89ec506742619faebf6d0ba4d65154?s=200" alt="Eddie" class="img-circle center-block">
 					<h4 class="card-title">Senior Web Consultant</h4>
 					<p class="card-text">
-						Open Source advocate. Full Stack with PHP &amp; Java, TDD, BDD, CI, CD. Passionate for #diversity in tech.
+						OpenSource advocate. FullStack, PHP/Java, TDD/BDD, CI/CD. Passionate for #diversity
 						Families...
+						<a href="http://twitter.com/WeRockTech">@WeRockTech</a>,
 						<a href="http://twitter.com/EmpowerHack">@EmpowerHack</a>,
 						<a href="http://twitter.com/WHFNP">@WHFNP</a>,
 						<a href="http://twitter.com/AcornAspiration">@AcornAspiration</a>
+						<a href="http://twitter.com/CodeFirstGirls">@CodeFirstGirls</a>
+						<a href="http://twitter.com/MumsInTech">@MumsInTech</a>
 					</p>
 				</div>
 
