--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,5 @@ body {
     background-image: url("../img/chibi.png");
     background-position: right bottom;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
