--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,241 @@
-hello
+<div class="flex flex-col h-screen">
+  <nav class="flex items-center justify-between flex-wrap bg-blue-900 p-6">
+    <span class="text-white text-2xl">Eddie Jaoude</span>
+    <div>
+      <a
+        href="#"
+        class="inline-block text-sm px-4 mx-2 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+      >
+        <fa-icon [icon]="['fab', 'github-square']" class="m-2"></fa-icon
+        >GitHub</a
+      >
+    </div>
+  </nav>
+
+  <img
+    src="https://user-images.githubusercontent.com/624760/87259350-a0381f00-c4a2-11ea-9782-69e4d06d423f.png"
+  />
+
+  <div class="container mx-auto flex-1">
+    <div class="rounded-lg shadow-lg my-6 p-4">
+      <h2 class="text-2xl text-center text-blue-900">
+        OPEN SOURCE is NOT about code, it is about people and collaboration
+      </h2>
+    </div>
+
+    <div
+      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 my-6"
+    >
+      <div class="rounded overflow-hidden shadow-xs">
+        <img
+          class="w-full"
+          src="https://s27389.pcdn.co/wp-content/uploads/2017/04/AdobeStock_112185177-3-1024x683.jpeg"
+          alt="Sunset in the mountains"
+        />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
+          <p class="text-gray-700 text-base">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Voluptatibus quia, nulla! Maiores et perferendis eaque,
+            exercitationem praesentium nihil.
+          </p>
+        </div>
+        <div class="px-6 py-4 flex flex-wrap">
+          <span
+            class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+            >#photography</span
+          >
+          <span
+            class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+            >#travel</span
+          >
+          <span
+            class="bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+            >#winter</span
+          >
+        </div>
+      </div>
+
+      <div class="rounded overflow-hidden shadow-xs">
+        <img
+          class="w-full"
+          src="https://s27389.pcdn.co/wp-content/uploads/2017/04/AdobeStock_112185177-3-1024x683.jpeg"
+          alt="Sunset in the mountains"
+        />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
+          <p class="text-gray-700 text-base">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Voluptatibus quia, nulla! Maiores et perferendis eaque,
+            exercitationem praesentium nihil.
+          </p>
+        </div>
+        <div class="px-6 py-4">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+            >#photography</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+            >#travel</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+            >#winter</span
+          >
+        </div>
+      </div>
+
+      <div class="rounded overflow-hidden shadow-xs">
+        <img
+          class="w-full"
+          src="https://s27389.pcdn.co/wp-content/uploads/2017/04/AdobeStock_112185177-3-1024x683.jpeg"
+          alt="Sunset in the mountains"
+        />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
+          <p class="text-gray-700 text-base">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Voluptatibus quia, nulla! Maiores et perferendis eaque,
+            exercitationem praesentium nihil.
+          </p>
+        </div>
+        <div class="px-6 py-4">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+            >#photography</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+            >#travel</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+            >#winter</span
+          >
+        </div>
+      </div>
+
+      <div class="rounded overflow-hidden shadow-xs">
+        <img
+          class="w-full"
+          src="https://s27389.pcdn.co/wp-content/uploads/2017/04/AdobeStock_112185177-3-1024x683.jpeg"
+          alt="Sunset in the mountains"
+        />
+        <div class="px-6 py-4">
+          <div class="font-bold text-xl mb-2">The Coldest Sunset</div>
+          <p class="text-gray-700 text-base">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Voluptatibus quia, nulla! Maiores et perferendis eaque,
+            exercitationem praesentium nihil.
+          </p>
+        </div>
+        <div class="px-6 py-4">
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+            >#photography</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2"
+            >#travel</span
+          >
+          <span
+            class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700"
+            >#winter</span
+          >
+        </div>
+      </div>
+    </div>
+
+    <div class="border-l-8 border-blue-900 mb-4 p-6">
+      <div class="text-gray-800 text-xl">
+        <fa-icon [icon]="['fas', 'quote-left']" class="m-2 text-xl"></fa-icon>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit
+        amet elit vitae dui ullamcorper interdum vel nec nunc. Pellentesque
+        fringilla congue tortor. Donec auctor accumsan hendrerit. Morbi
+        malesuada sodales auctor
+        <fa-icon [icon]="['fas', 'quote-right']" class="m-2 text-xl"></fa-icon>
+      </div>
+      <div class="flex items-center mt-4">
+        <img
+          class="w-10 h-10 rounded-full mr-4"
+          src="http://eddiejaoude.github.io/img/profile.jpg"
+          alt="Avatar of Jonathan Reinink"
+        />
+        <div class="text-sm">
+          <p class="text-gray-900 leading-none">Jonathan Reinink</p>
+          <p class="text-gray-600">From company X</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="border-r-8 border-blue-900 mb-4 p-6">
+      <div class="text-gray-800 text-xl">
+        <fa-icon [icon]="['fas', 'quote-left']" class="m-2 text-xl"></fa-icon>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit
+        amet elit vitae dui ullamcorper interdum vel nec nunc. Pellentesque
+        fringilla congue tortor. Donec auctor accumsan hendrerit. Morbi
+        malesuada sodales auctor
+        <fa-icon [icon]="['fas', 'quote-right']" class="m-2 text-xl"></fa-icon>
+      </div>
+      <div class="flex items-center mt-4 flex-row-reverse">
+        <img
+          class="w-10 h-10 rounded-full ml-4"
+          src="http://eddiejaoude.github.io/img/profile.jpg"
+          alt="Avatar of Jonathan Reinink"
+        />
+        <div class="text-sm">
+          <p class="text-gray-900 leading-none">Jonathan Reinink</p>
+          <p class="text-gray-600">From company X</p>
+        </div>
+      </div>
+    </div>
+
+    <ul>
+      <li>Open Source Projects</li>
+      <li>Communities</li>
+      <li>Future events</li>
+      <li>Past events</li>
+      <li>Experience</li>
+      <li>Recommended resources</li>
+      <li>My setup - picture + diagram + kit list</li>
+    </ul>
+  </div>
+
+  <div
+    class="flex flex-col bg-blue-900 p-6 md:flex-row border-indigo-300 border-t-2 md:sticky bottom-0"
+  >
+    <a
+      href="#"
+      class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+    >
+      <fa-icon [icon]="['fab', 'youtube-square']" class="m-2"></fa-icon
+      >YouTube</a
+    >
+    <a
+      href="#"
+      class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+    >
+      <fa-icon [icon]="['fab', 'twitter-square']" class="m-2"></fa-icon
+      >Twitter</a
+    >
+    <a
+      href="#"
+      class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+    >
+      <fa-icon [icon]="['fab', 'linkedin']" class="m-2"></fa-icon>LinkedIn</a
+    >
+    <a
+      href="#"
+      class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+    >
+      <fa-icon [icon]="['fab', 'github-square']" class="m-2"></fa-icon>GitHub</a
+    >
+    <a
+      href="#"
+      class="inline-block text-sm m-2 px-4 py-2 leading-none border rounded text-white border-white hover:border-transparent hover:text-teal-500 hover:bg-white"
+    >
+      <fa-icon [icon]="['fab', 'discord']" class="m-2"></fa-icon>Discord</a
+    >
+  </div>
+</div>
